--- a/style.css
+++ b/style.css
@@ -1,83 +1,147 @@
 body {
-        background-color: rgb(253, 251, 251);
+  background-color: rgb(253, 251, 251);
 }
 
 #cabecalho {
-        position: fixed;
-        top: 0;
-        padding: 10px;
-        background-color: cornflowerblue;
+  position: fixed;
+  top: 0;
+  background-color: rgb(12, 134, 33);
+  color: white;
+  text-align: center;
+  width: 100%;
+  z-index: 1;
 }
 
 nav {
-        position: fixed;
-        top: 100px;
-        background-color: darkcyan;
-        font-family: Arial, Helvetica, sans-serif;
+  position: fixed;
+  top: 80px;
+  background-color: darkcyan;
+  font-family: Arial, Helvetica, sans-serif;
+  width: 100%;
+  z-index: 2;
 }
 
+.indices li  {
+  display: inline;
+  padding: 30px;      
+}
+
+a {
+  text-decoration: none;  
+  color: white;   
+}
+      
 section {
-    display: inline-block;
-    border: 1px solid black;
+  display: inline-block;
+  border: 1px solid black;
+  padding: 10px;
 }
 
 #minha_foto {
-        border: 1px solid black;
-        width: 200px;
-        position: absolute;
-        top: 170px;
+  width: 200px;
+  position: absolute;
+  top: 170px;
+  border-radius: 20%;
+  left: 400px;
 } 
 
 h2:nth-of-type(1) {
-        position: absolute;
-        top: 350px;
+  position: absolute;
+  top: 400px;
 }
 
 h2:nth-of-type(2) {
-        position: absolute;
-        top: 350px;
-        left: 300px;
+  position: absolute;
+  top: 400px;
+  left: 340px;
 }
 
 #licoes_aprendidas {
-        border: 1px solid black;
-        position: absolute;
-        top: 400px;
-        font-size: 20px;
-        line-height: 1.5;
+  border: 1px solid black;
+  position: absolute;
+  top: 450px;
+  font-size: 20px;
+  line-height: 1.5;
+  color: white;
+  background-color: teal;
+  padding: 30px;
+  width: 230px;
+  
 }
 
 #licoes_a_aprender {
-        border: 1px solid black;
-        position: absolute;
-        top: 400px;
-        left: 300px;
-        font-size: 20px;
-        line-height: 1.5;
+  border: 1px solid black;
+  position: absolute;
+  top: 450px;
+  left: 340px;
+  font-size: 20px;
+  line-height: 1.5;
+  color: white;
+  background-color: teal;
+  padding: 30px;
 }
 
 .table {
-        border: 1px solid black;
-        position: absolute;
-        top: 400px;
-        left: 300px;
+  background-color: green;
+  padding: 30px;
+  position: absolute;
+  color: white;
+  top: 220px;
+  left: 600px;
+  text-align: center;
 }
 
 article {
-        border: 1px solid black;
-        position: absolute;
-        top: 600px;
-        font-family: sans-serif;
+  display: inline-block;
+  border: 1px solid black;
+  background-color: green;
+  color: white;
+  position: absolute;
+  top: 1000px;
+  font-family: sans-serif;
+  font-size: 20px;
+  padding: 20px;
+  width: 500px;
 }
 
 aside {
-        border: 1px solid black;
-        position: absolute;
-        top: 700px;
+  display: inline-block;
+  border: 1px solid black;
+  background-color: teal;
+  color: white;
+  position: absolute;
+  top: 1000px;
+  left: 700px;
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 20px;
+  width: 300px;
+  padding: 30px;
+}
+
+#curriculo {
+  display: inline-block;
+  border: 1px solid black;
+  background-color: teal;
+  color: white;
+  position: absolute;
+  top: 1500px;
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 15px;
+  width: 200px;
+  padding: 30px;
 }
 
 #rodape {
-        background-color: black;
-        color: cornflowerblue;
-        margin-top: 100%;
+  background-color:white;
+  position: absolute;
+  color: green;
+  z-index: 3;
+  top: 2000px;
+  width: 100%;
+  text-align: center;
+}
+
+a:hover {
+border: 1px solid white;
+margin: 30px;       
 }
