--- a/style.css
+++ b/style.css
@@ -1,18 +1,18 @@
 * {
   margin: 0;
   box-sizing: border-box;
-	font-family: Architects Daughter;
+  font-family: Architects Daughter, sans-serif;
 }
 
 body {
   background-color: rgb(253, 251, 251);
-	font-size: 14px;
+  font-size: 14px;
 }
 
 #cabecalho {
-	position: fixed;
+  position: fixed;
   top: 0;
-	width: 100%;
+  width: 100%;
   background-color: rgb(245, 188, 91);
   color: white;
   text-align: center;
@@ -52,7 +52,7 @@ body {
 }
 
 #profile_image {
-	margin-top: 110px;
+  margin-top: 110px;
   padding: 50px;
   text-align: center;
   background-color: rgb(253, 213, 177);
@@ -62,6 +62,7 @@ body {
   text-align: center;
   padding: 50px;
   background-color: rgb(253, 213, 177);
+  line-height: 20px;
 }
 
 #text_about_apprenticeship {
