--- a/style.css
+++ b/style.css
@@ -1,7 +1,13 @@
 body{
     background-color: rgb(253, 251, 251);
 }
-.cabecalho{
+#cabecalho{
     position: fixed;
     top: 0;
+}
+#titulo{
+
+}
+#minha_foto{
+    
 }
