--- a/style.css
+++ b/style.css
@@ -20,10 +20,14 @@ body{
 
 }
 #container_img{
-
+    text-align: center;
+    margin: 200px 0;
+    border: medium solid black;
+    padding: 2em 0;
 }
 #minha_foto{
-margin-top: 5em;
+    width: 534px;
+    height:400px ;
 }
 #sec_listas{
 
