--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 body {
   background-color:  rgb(253, 251, 251);
-  margin: 0;
+  margin: 0px;
 }
 
 #cabecalho {
@@ -12,7 +12,7 @@ body {
   top: 0;
 }
 
-#titulo, nav {
+#titulo {
   text-align: center;
   color: rgb(11, 12, 12);
 }
@@ -21,6 +21,7 @@ nav, #rodape {
   background-color: rgb(203, 228, 135);
   color: rgb(12, 41, 66);
   font-size: 20px;
+  text-align: center;
 }
 
 #minha_foto {
@@ -28,30 +29,22 @@ nav, #rodape {
   padding-top: 100px;
 }
 
-main, article {
+main, .centro {
   text-align: center;
 }
 
 .licao {
   display: inline-block;
-  padding-right: 50px;
-  padding-left: 50px;
-  width: 200px
+  padding-right: 100px;
+  padding-left: 100px;
+  width: 200px;
 }
 
 .linha {
   display: inline-block;
-  width: 500px;
+  width: 450px;
   height: 300px;
   border: 3px solid black;
-}
-
-#rodape {
-  text-align: center;
-}
-
-.centro {
-  text-align: center;
 }
 
 p {
