--- a/style.css
+++ b/style.css
@@ -1,58 +1,57 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    background-color: rgb(253, 251, 251);
-    font-family: Arial, Helvetica, sans-serif;
+  background-color: rgb(253, 251, 251);
+  font-family: Arial, Helvetica, sans-serif;
 }
-
-#left {
-    float: left;
-}
-
-#right {
-    float: right;
-}
-
 
 header {
-    background-color: rgb(238, 212, 188);
-    color: rgb(44, 34, 19);;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    line-height: normal;
-    top: 0;
-    width: 120vw;
-    padding: 50px;
-    position: fixed;
+  background-color: rgb(238, 212, 188);
+  color: rgb(44, 34, 19);
+  font-family: Gill Sans, Gill Sans MT, Calibri, Trebuchet MS, sans-serif;
+  line-height: normal;
+  top: 0;
+  width: 120vw;
+  padding: 50px;
+  position: fixed;
 }
 
 header h1 {
-    font-size: 45px;
-    padding: 15px;
-    padding-left: 40px;
-    padding-right: 40px;
-    color: rgb(44, 34, 19);
-    margin-right: auto;
-    margin-left: auto;
+  font-size: 45px;
+  padding: 15px;
+  padding-left: 40px;
+  padding-right: 40px;
+  color: rgb(44, 34, 19);
+  margin-right: auto;
+  margin-left: auto;
+}
+
+main li {
+  padding: 5px;
+}
+
+.lista li {
+  margin: 10px;
 }
 
 .nav-main {
-    position: absolute;
-    left: 3%;
-    bottom: 1px;
+  position: absolute;
+  left: 3%;
+  bottom: 1px;
 }
 
-
 .nav-main ul li {
-    display: inline-block;
-    padding: 25px;
+  display: inline-block;
+  padding: 25px;
 }
 
 .nav-main ul li:hover {
-    background-color: rgba(000, 000, 000, 0.1);    
+  background-color: rgba(000, 000, 000, 0.1);
+  cursor: pointer;
 }
 
 .nav-main ul li a {
@@ -61,82 +60,74 @@ header h1 {
 }
 
 #minha_foto {
-    border-radius: 50%;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 30px;
-    margin-top: 200px;
+  border-radius: 50%;
+  display: block;
+  margin: auto;
+  margin-bottom: 30px;
+  margin-top: 200px;
 }
 
 .lista {
-    padding: 50px;
-    margin: 5px;
-    display: inline-block;
-    background-color: rgb(226, 196, 168);
-    border-radius: 35px;
-}
-
-.lista li {
-    margin: 10px;
-}
-
-main li {
-    padding: 5px;
+  padding: 50px;
+  margin: 5px;
+  display: inline-block;
+  background-color: rgb(226, 196, 168);
+  border-radius: 35px;
 }
 
 main table {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 main table caption {
-    color: rgb(44, 34, 19);
-    font-weight: 900;
-    background-color: rgb(226, 196, 168);
-    border-radius:35px;
-    padding: 10px;
-    margin: 5px;
+  color: rgb(44, 34, 19);
+  font-weight: 900;
+  background-color: rgb(226, 196, 168);
+  border-radius: 35px;
+  padding: 10px;
+  margin: 5px;
 }
 
 main table th {
-    background-color: rgb(226, 196, 168);
-    border-radius: 35px;
-    padding: 10px;
-    margin: 5px;
+  background-color: rgb(226, 196, 168);
+  border-radius: 35px;
+  padding: 10px;
+  margin: 5px;
 }
 
 main table tr td {
-    text-align: center;
-    background-color: rgb(226, 196, 168);
-    border-radius: 35px;
-    padding: 10px;
+  text-align: center;
+  background-color: rgb(226, 196, 168);
+  border-radius: 35px;
+  padding: 10px;
+}
+
+p , h2 , h3 {
+  text-align: center;
 }
 
 main p {
-    line-height: 1.6;
-    margin: 20px;
-}
-
-p, h2, h3 {
-    text-align: center;
+  line-height: 1.6;
+  margin: 20px;
 }
 
 footer {
-    background-color: rgb(194, 170, 148);
-    clear: both;
-    position: relative;
+  background-color: rgb(194, 170, 148);
+  clear: both;
+  position: relative;
 }
+
 #footer-text {
-    clear: both;
-    text-align: right;
+  clear: both;
+  text-align: right;
 }
 
 .blocos {
-    padding: 20px;  
-    width: fit-content;
-    background-color:rgb(238, 212, 188);
-    margin-right: auto;
-    margin-left: auto;
-    margin-bottom: 20px;
-    border-radius: 45px;
+  padding: 20px;
+  width: fit-content;
+  background-color: rgb(238, 212, 188);
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 20px;
+  border-radius: 45px;
 }
