--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
 }
+
 body {
   background-color: rgb(253, 251, 251);
 }
@@ -11,7 +12,7 @@ body {
   top: 0;
 }
 
-ul, ol {
+ul , ol {
   margin: 25px;
 }
 
@@ -32,8 +33,8 @@ nav {
 
 article {
   font-size: medium;
-  color:grey;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  color: grey;
+  font-family: Franklin-Gothic-Medium, Arial-Narrow, Arial, sans-serif;
   line-height: 25px;
   border: 0;
 }
@@ -43,7 +44,7 @@ div {
   justify-content: space-between;
 }
 
-table, th, td {
-  border:1px solid black;
+table , th , td {
+  border: 1px solid black;
   margin-bottom: 30px;
 }
